Changelog
=========

1.7 (unreleased)
----------------

- Nothing changed yet.


1.6 (2011-09-06)
----------------

- Prevent issues from being automatically renamed after they are
  edited.
  [maurits]

- Prevent some more lower-case email address comparison problems.
  [maurits]


1.5 (2011-06-22)
----------------

- Make e-mail from address lower-case to prevent search problems with ldap
  users. [jladage]


1.4 (2011-06-14)
----------------

- When searching PAS for a user by email address, strip off any white
  space (like possibly '\r\n' in ldap) from the returned addresses, to
  avoid non-matching for silly reasons.
  [maurits]

- Moved all options to a new config.py file.
  [maurits]

- Add option ADVANCED_SUBJECT_MATCH.  Default is False: we only check
  for '#123' in the Subject line, to avoid matching overly generic
  Subject lines like 'Hi' or 'Problem'.  To get back the previous
  behavior, set this to True (in a patch in your own code, likely).
  [maurits]

- If the subject is empty, do not try to find a matching issue, as all
  issues will match.
  [maurits]


1.3 (2011-05-11)
----------------

- Added FAKE_MANAGER option (default is True) to determine if we
  should fake a Manager role to be sure that a post succeeds.
  [maurits]

- While switching users: if 'email' is not in the properties (say:
  ldap), we can get far too many results; so we do a double check.
  [maurits]


1.2 (2011-05-09)
----------------

- Ignore mails with the email_from_address as From address, as this
  too easily means that a message sent by Poi ends up being added as a
  reply on an issue that we have just created.
  [maurits]


1.1 (2011-05-05)
----------------

- Handle encoded subject lines better.
  [maurits]


1.0 (2011-05-05)
----------------

- Initial release